fix: paginator numbers alignment

--- a/src/styles/paginator.module.scss
+++ b/src/styles/paginator.module.scss
@@ -1,4 +1,5 @@
 .container {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
